PLC/yacc/y.output
Useless nonterminals

   Insts


Terminals which are not used

   ';'


Useless rules

   14 Insts: Inst
   15      | Insts ';' Inst


Grammar

    0 $accept: Inst $end

    1 Inst: Atrib

    2 Atrib: Var '=' Exp

    3 Var: ID

    4 Exp: Termo
    5    | Exp '+' Termo
    6    | Exp '-' Termo

    7 Termo: Fator
    8      | Termo '*' Fator
    9      | Termo '/' Fator

   10 Fator: NUMI
   11      | NUMF
   12      | ID
   13      | '(' Exp ')'


Terminals, with rules where they appear

$end (0) 0
'(' (40) 13
')' (41) 13
'*' (42) 8
'+' (43) 5
'-' (45) 6
'/' (47) 9
';' (59)
'=' (61) 2
error (256)
ID (258) 3 12
NUMI (259) 10
NUMF (260) 11


Nonterminals, with rules where they appear

$accept (14)
    on left: 0
Inst (15)
    on left: 1, on right: 0
Atrib (16)
    on left: 2, on right: 1
Var (17)
    on left: 3, on right: 2
Exp (18)
    on left: 4 5 6, on right: 2 5 6 13
Termo (19)
    on left: 7 8 9, on right: 4 5 6 8 9
Fator (20)
    on left: 10 11 12 13, on right: 7 8 9


state 0

    0 $accept: . Inst $end

    ID  shift, and go to state 1

    Inst   go to state 2
    Atrib  go to state 3
    Var    go to state 4


state 1

    3 Var: ID .

    $default  reduce using rule 3 (Var)


state 2

    0 $accept: Inst . $end

    $end  shift, and go to state 5


state 3

    1 Inst: Atrib .

    $default  reduce using rule 1 (Inst)


state 4

    2 Atrib: Var . '=' Exp

    '='  shift, and go to state 6


state 5

    0 $accept: Inst $end .

    $default  accept


state 6

    2 Atrib: Var '=' . Exp

    ID    shift, and go to state 7
    NUMI  shift, and go to state 8
    NUMF  shift, and go to state 9
    '('   shift, and go to state 10

    Exp    go to state 11
    Termo  go to state 12
    Fator  go to state 13


state 7

   12 Fator: ID .

    $default  reduce using rule 12 (Fator)


state 8

   10 Fator: NUMI .

    $default  reduce using rule 10 (Fator)


state 9

   11 Fator: NUMF .

    $default  reduce using rule 11 (Fator)


state 10

   13 Fator: '(' . Exp ')'

    ID    shift, and go to state 7
    NUMI  shift, and go to state 8
    NUMF  shift, and go to state 9
    '('   shift, and go to state 10

    Exp    go to state 14
    Termo  go to state 12
    Fator  go to state 13


state 11

    2 Atrib: Var '=' Exp .
    5 Exp: Exp . '+' Termo
    6    | Exp . '-' Termo

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16

    $default  reduce using rule 2 (Atrib)


state 12

    4 Exp: Termo .
    8 Termo: Termo . '*' Fator
    9      | Termo . '/' Fator

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 4 (Exp)


state 13

    7 Termo: Fator .

    $default  reduce using rule 7 (Termo)


state 14

    5 Exp: Exp . '+' Termo
    6    | Exp . '-' Termo
   13 Fator: '(' Exp . ')'

    '+'  shift, and go to state 15
    '-'  shift, and go to state 16
    ')'  shift, and go to state 19


state 15

    5 Exp: Exp '+' . Termo

    ID    shift, and go to state 7
    NUMI  shift, and go to state 8
    NUMF  shift, and go to state 9
    '('   shift, and go to state 10

    Termo  go to state 20
    Fator  go to state 13


state 16

    6 Exp: Exp '-' . Termo

    ID    shift, and go to state 7
    NUMI  shift, and go to state 8
    NUMF  shift, and go to state 9
    '('   shift, and go to state 10

    Termo  go to state 21
    Fator  go to state 13


state 17

    8 Termo: Termo '*' . Fator

    ID    shift, and go to state 7
    NUMI  shift, and go to state 8
    NUMF  shift, and go to state 9
    '('   shift, and go to state 10

    Fator  go to state 22


state 18

    9 Termo: Termo '/' . Fator

    ID    shift, and go to state 7
    NUMI  shift, and go to state 8
    NUMF  shift, and go to state 9
    '('   shift, and go to state 10

    Fator  go to state 23


state 19

   13 Fator: '(' Exp ')' .

    $default  reduce using rule 13 (Fator)


state 20

    5 Exp: Exp '+' Termo .
    8 Termo: Termo . '*' Fator
    9      | Termo . '/' Fator

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 5 (Exp)


state 21

    6 Exp: Exp '-' Termo .
    8 Termo: Termo . '*' Fator
    9      | Termo . '/' Fator

    '*'  shift, and go to state 17
    '/'  shift, and go to state 18

    $default  reduce using rule 6 (Exp)


state 22

    8 Termo: Termo '*' Fator .

    $default  reduce using rule 8 (Termo)


state 23

    9 Termo: Termo '/' Fator .

    $default  reduce using rule 9 (Termo)
